fixed spacing between cards on destinations

--- a/styles/places.css
+++ b/styles/places.css
@@ -9,10 +9,10 @@ header {
 
 main ul {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 48px auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 100px 200px;
+  gap: 20px 20px;
 }
 main li {
   display: flex;
@@ -20,7 +20,6 @@ main li {
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   overflow: hidden;
-  width: 500px;
 }
 main li img {
   width: 300px;
